--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,6 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Antonia Cronin's first Rails app.
 
 Things you may want to cover:
 
